# takehome_problem

./: README.md  src
source/: pubmed_fetcher.py
tests/: pyproject.toml  test_pubmed_fetcher.py
