[tool.poetry]
name = "takehome_problem"
version = "0.1.0"
description = "A program to fetch research papers from PubMed based on a user-specified query."
authors = ["Kuruva Sandeep <sandeepkuruva0@gmail.com.com>"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"